--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<div class="container">
 			<div class="content">
 				<div class="name_wrap"><h3><span>OLAOTAN</span> LAWAL<span class="overlay_effect"></span></h3></div>
-				<div class="job_wrap"><span class="job">Software Designer/Developer<span class="overlay_effect"></span></span></div>
+				<div class="job_wrap"><span class="job">Frontend Designer/Developer<span class="overlay_effect"></span></span></div>
 			</div>
 			<div class="shane_tm_down" data-skin="dark"> 
 				<div class="line_wrapper">
@@ -143,10 +143,10 @@
 					<div class="right">
 						<div class="shane_tm_title">
 							<span>About Me</span>
-							<h3>Software Developer based in Nairobi, KENYA</h3>
+							<h3>Frontend Developer based in Nairobi, KENYA</h3>
 						</div>
 						<div class="text">
-							<p>I'm software designer/ developer, and I'm very passionate and dedicated to my work. With 2 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
+							<p>I'm Frontend designer/ developer, and I'm very passionate and dedicated to my work. With 2 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 						</div>
 						<div class="shane_tm_button">
 							<a href="img/resume/Product-Design.pdf" download>Download CV</a>
@@ -201,7 +201,7 @@
 						<li class="design">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Road side assistance" data-category="UI UX">
-									<a class="popup-youtube" href="https://www.youtube.com/watch?v=ICr_bOuM9Zo">
+									<a class="popup-youtube" href="https://www.youtube.com/watch?v=VIeafcxtdW8">
 										<img src="img/placeholders/1-1.jpg" alt="" />
 										<div class="main" data-img-url="img/portfolio/5149064.png"></div>
 									</a>
@@ -216,7 +216,7 @@
 						<li class="design">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Drriver's App" data-category="UI UX">
-									<a class="zoom" href="img/portfolio/3.jpg">
+									<a class="popup-youtube" href="https://www.youtube.com/watch?v=tZbOyN3jfj0">
 										<img src="img/placeholders/1-1.jpg" alt="" />
 										<div class="main" data-img-url="img/portfolio/4168793.png"></div>
 									</a>
@@ -231,7 +231,7 @@
 						<li class="design">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Andela Cohort Project" data-category="UI UX">
-									<a class="zoom" href="img/portfolio/4.jpg">
+									<a class="popup-youtube" href="https://www.youtube.com/watch?v=KA3WAlzZAVE">
 										<img src="img/placeholders/1-1.jpg" alt="" />
 										<div class="main" data-img-url="img/portfolio/opendata.png"></div>
 									</a>
