finished verrsion of webpage

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						<li class="design">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Real Estate App" data-category="UI UX">
-									<a class="zoom" href="img/portfolio/1.jpg">
+									<a href="https://www.figma.com/file/XEuEBfo36ttnt1dL55bZhy/Real-estate?node-id=103%3A3">
 										<img src="img/placeholders/1-1.jpg" alt="" />
 										<div class="main" data-img-url="img/portfolio/realestate.png"></div>
 									</a>
@@ -246,7 +246,7 @@
 						<li class="design">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Ecommerce Design" data-category="UI UX">
-									<a class="popup-youtube" href="https://www.youtube.com/watch?v=ICr_bOuM9Zo">
+									<a href="https://www.figma.com/file/9j5lGMHJRdQ9tlRBqDVbWE/Web-ecommerce?node-id=109%3A13">
 										<img src="img/placeholders/1-1.jpg" alt="" />
 										<div class="main" data-img-url="img/portfolio/ecom.png"></div>
 									</a>
