Application environment set up

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<!-- HERO -->
 	<div class="shane_tm_hero" id="home" data-style="one"> <!-- data-style values: one,two,three >> Empty is SQUARE shape -->
 		<div class="background">
-			<div class="image" data-img-url="img/slider/HER3.png"></div>
+			<div class="image" data-img-url="img/slider/HER3.jpg"></div>
 		</div>
 		<div class="container">
 			<div class="content">
@@ -137,7 +137,7 @@
 					<div class="left">
 						<div class="image">
 							<img src="img/placeholders/1-1.jpg" alt="" />
-							<div class="main" data-img-url="img/about/about.jpg"></div>
+							<div class="main" data-img-url="img/about/about.png"></div>
 						</div>
 					</div>
 					<div class="right">
@@ -404,7 +404,7 @@
 					<ul class="owl-carousel">
 						<li class="item"><a href="http://publicspeaking.co.ke/"><img src="img/partners/1.png" alt="ccl" /></a></li>
 						<li class="item"><a href="https://univelcity.com/"><img src="img/partners/2.png" alt="univelcity" /></a></li>
-						<li class="item"><a href="https://www.togree.co.ke/"><img src="img/partners/3.png" alt="togree" /></a></li>
+						<li class="item"><a href="https://www.togree.co.ke/products"><img src="img/partners/3.png" alt="togree" /></a></li>
 						<li class="item"><a href="https://buildforsdg.andela.com/"><img src="img/partners/4.png" alt="andela" /></a></li>
 					</ul>
 				</div>
