--- a/index.html
+++ b/index.html
@@ -317,6 +317,34 @@
 								</div>
 							</div>
 						</li>
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="FullStack App" data-category="web Apps">
+									<a href="https://bk-keeper.herokuapp.com/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/book-keeper.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>js node mongodb app</h3>
+									<span>Web apps</span>
+								</div>
+							</div>
+						</li>
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Node js web app" data-category="web Apps">
+									<a href="https://open-university.herokuapp.com/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/OIU.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Node JS/firebase web app</h3>
+									<span>Web apps</span>
+								</div>
+							</div>
+						</li>
 
 						<li class="others"">
 							<div class="inner">
@@ -367,7 +395,7 @@
 							<h3>I have high skills in designing and programming</h3>
 						</div>
 						<div class="text">
-							<p>I am working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional web applications</p>
+							<p>I admire creating products that provides value to the society at large</p>
 						</div>
 					</div>
 					<div class="right">
