--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 							<h3>I have high skills in designing and programming</h3>
 						</div>
 						<div class="text">
-							<p>I admire creating products that provides value to the society at large</p>
+							<p>I cherish creating products that provides value to the society at large</p>
 						</div>
 					</div>
 					<div class="right">
