--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							<p>I'm Frontend designer/ developer, and I'm very passionate and dedicated to my work. With 2 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 						</div>
 						<div class="shane_tm_button">
-							<a href="img/resume/Product-Design.pdf" download>Download CV</a>
+							<a href="img/resume/FDCV(New).pdf" download>Download CV</a>
 						</div>
 					</div>
 				</div>
