--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<div class="container">
 			<div class="content">
 				<div class="name_wrap"><h3><span>OLAOTAN</span> LAWAL<span class="overlay_effect"></span></h3></div>
-				<div class="job_wrap"><span class="job">Frontend Designer/Developer<span class="overlay_effect"></span></span></div>
+				<div class="job_wrap"><span class="job">Full-Stack Developer<span class="overlay_effect"></span></span></div>
 			</div>
 			<div class="shane_tm_down" data-skin="dark"> 
 				<div class="line_wrapper">
@@ -143,13 +143,13 @@
 					<div class="right">
 						<div class="shane_tm_title">
 							<span>About Me</span>
-							<h3>Frontend Developer based in Nairobi, KENYA</h3>
+							<h3>Software Developer based in Stirling, UK</h3>
 						</div>
 						<div class="text">
 							<p>I'm Frontend designer/ developer, and I'm very passionate and dedicated to my work. With 2 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 						</div>
 						<div class="shane_tm_button">
-							<a href="img/resume/FDCV(New).pdf" download>Download CV</a>
+							<a href="img/resume/OLAOTAN_CV.pdf" download>Download CV</a>
 						</div>
 					</div>
 				</div>
@@ -172,8 +172,8 @@
 						<div class="portfolio_filter">
 							<ul>
 								<li><a href="#" class="current" data-filter="*">All</a></li>
-								<li><a href="#" data-filter=".design">UI/UX</a></li>
 								<li><a href="#" data-filter=".webdev">Web Projects</a></li>
+								<li><a href="#" data-filter=".design">UI/UX</a></li>
 								<li><a href="#" data-filter=".others">Others</a></li>
 							</ul>
 						</div>
@@ -182,6 +182,111 @@
 				<div class="shane_tm_portfolio_titles"></div>
 				<div class="portfolio_list">
 					<ul class="gallery_zoom">
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Kilifi Project" data-category="web Apps">
+									<a href="https://kilifi-open.netlify.app/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/Kilifi.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Kilifi Project</h3>
+									<span>Web Apps</span>
+								</div>
+							</div>
+						</li>
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Nextjs covid map" data-category="web Apps">
+									<a href="https://leaftlet-chartjs-demo.vercel.app/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/covid.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Nextjs covid map</h3>
+									<span>Web Apps</span>
+								</div>
+							</div>
+						</li>
+						
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Vanilla todo" data-category="web Apps">
+									<a href="https://vanillatodofor.netlify.app/todo_list/home/#">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/todo.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>vanilla todo</h3>
+									<span>Web Apps</span>
+								</div>
+							</div>
+						</li>
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="loan calculator" data-category="web Apps">
+									<a href="https://gifted-rosalind-d06392.netlify.app/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/loan.jpg"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>loan calculator</h3>
+									<span>Web Apps</span>
+								</div>
+							</div>
+						</li>
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Javascript Game" data-category="web Apps">
+									<a href="https://infallible-leakey-cb3bd3.netlify.app/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/game.jpg"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Javscript game</h3>
+									<span>Web apps</span>
+								</div>
+							</div>
+						</li>
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="FullStack App" data-category="web Apps">
+									<a href="https://bk-keeper.herokuapp.com/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/book-keeper.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>js node mongodb app</h3>
+									<span>Web apps</span>
+								</div>
+							</div>
+						</li>
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Node js web app" data-category="web Apps">
+									<a href="https://open-university.herokuapp.com/">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/OIU.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Node JS/firebase web app</h3>
+									<span>Web apps</span>
+								</div>
+							</div>
+						</li>
+
 
 						<li class="design">
 							<div class="inner">
@@ -272,80 +377,6 @@
 								</div>
 							</div>
 						</li>
-
-						<li class="webdev"">
-							<div class="inner">
-								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Vanilla todo" data-category="web Apps">
-									<a href="https://vanillatodofor.netlify.app/todo_list/home/#">
-										<img src="img/placeholders/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/todo.png"></div>
-									</a>
-								</div>
-								<div class="mobile_title">
-									<h3>vanilla todo</h3>
-									<span>Web Apps</span>
-								</div>
-							</div>
-						</li>
-
-						<li class="webdev"">
-							<div class="inner">
-								<div class="entry shane_tm_portfolio_animation_wrap" data-title="loan calculator" data-category="web Apps">
-									<a href="https://gifted-rosalind-d06392.netlify.app/">
-										<img src="img/placeholders/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/loan.jpg"></div>
-									</a>
-								</div>
-								<div class="mobile_title">
-									<h3>loan calculator</h3>
-									<span>Web Apps</span>
-								</div>
-							</div>
-						</li>
-
-						<li class="webdev"">
-							<div class="inner">
-								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Javascript Game" data-category="web Apps">
-									<a href="https://infallible-leakey-cb3bd3.netlify.app/">
-										<img src="img/placeholders/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/game.jpg"></div>
-									</a>
-								</div>
-								<div class="mobile_title">
-									<h3>Javscript game</h3>
-									<span>Web apps</span>
-								</div>
-							</div>
-						</li>
-						<li class="webdev"">
-							<div class="inner">
-								<div class="entry shane_tm_portfolio_animation_wrap" data-title="FullStack App" data-category="web Apps">
-									<a href="https://bk-keeper.herokuapp.com/">
-										<img src="img/placeholders/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/book-keeper.png"></div>
-									</a>
-								</div>
-								<div class="mobile_title">
-									<h3>js node mongodb app</h3>
-									<span>Web apps</span>
-								</div>
-							</div>
-						</li>
-						<li class="webdev"">
-							<div class="inner">
-								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Node js web app" data-category="web Apps">
-									<a href="https://open-university.herokuapp.com/">
-										<img src="img/placeholders/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/OIU.png"></div>
-									</a>
-								</div>
-								<div class="mobile_title">
-									<h3>Node JS/firebase web app</h3>
-									<span>Web apps</span>
-								</div>
-							</div>
-						</li>
-
 						<li class="others"">
 							<div class="inner">
 								<div class="entry shane_tm_portfolio_animation_wrap" data-title="Job Web scrapping App" data-category="Python">
