--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 		</div>
 		<div class="container">
 			<div class="content">
-				<div class="name_wrap"><h3><span>OLAOTAN</span> LAWAL<span class="overlay_effect"></span></h3></div>
-				<div class="job_wrap"><span class="job">Full-Stack Developer<span class="overlay_effect"></span></span></div>
+				<div class="name_wrap"><h3><span>LAWAL</span>OLAOTAN<span class="overlay_effect"></span></h3></div>
+				<div class="job_wrap"><span class="job">FullStack Developer<span class="overlay_effect"></span></span></div>
 			</div>
 			<div class="shane_tm_down" data-skin="dark"> 
 				<div class="line_wrapper">
@@ -143,10 +143,10 @@
 					<div class="right">
 						<div class="shane_tm_title">
 							<span>About Me</span>
-							<h3>Software Developer based in Stirling, UK</h3>
+							<h3>Software Developer based in Stirling,UK</h3>
 						</div>
 						<div class="text">
-							<p>I'm Frontend designer/ developer, and I'm very passionate and dedicated to my work. With 2 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
+							<p>I'm FullStack Developer who's very passionate and dedicated to my work. With 3 years experience as a professional software developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 						</div>
 						<div class="shane_tm_button">
 							<a href="img/resume/OLAOTAN_CV.pdf" download>Download CV</a>
@@ -182,6 +182,21 @@
 				<div class="shane_tm_portfolio_titles"></div>
 				<div class="portfolio_list">
 					<ul class="gallery_zoom">
+
+						<li class="webdev"">
+							<div class="inner">
+								<div class="entry shane_tm_portfolio_animation_wrap" data-title="chrome extension" data-category="web Apps">
+									<a href="https://www.robotdorm.com/" target="_blank">
+										<img src="img/placeholders/1-1.jpg" alt="" />
+										<div class="main" data-img-url="img/portfolio/chrome.png"></div>
+									</a>
+								</div>
+								<div class="mobile_title">
+									<h3>Chrome Extension</h3>
+									<span>Web Apps</span>
+								</div>
+							</div>
+						</li>
 
 						<li class="webdev"">
 							<div class="inner">
